# Euler1D

./: CMakeLists.txt  main.cpp
EOS/: genericeos.cpp  genericeos.h  idealgaseos.cpp  idealgaseos.h  pengrobinsoneos.cpp  pengrobinsoneos.h  utils.h  vanderwaalseos.cpp  vanderwaalseos.h
GridOps/: grid1d.cpp  grid1d.h
Solvers/: Interface.h  genericsolver.cpp  genericsolver.h
